Replaced the HTMLarea widget for editing web pages with Xinha, when using Webmin 1.332 or later.
Broke the Bandwidth Monitoring page down into collapsible sections.
Added a new page for regularly updating a dynamic IP address, for systems where the primary IP is not static.
Updated the 'Show system information on main page?' Module Config option to allow display for resellers too.
Autoreply message recipient tracking files are now stored in /var/virtualmin-autoreply, so that they can be accessed by the mail server when a virtual server's home is not world-readable.
Plugin modules can now have help links on the virtual server creation and editing pages.
Added tabs to the Manage SSL Certificate page.
Added the 'User-configured mail forwarding' section to the Edit Mailbox page, to show forwarding setup by the user in their .procmailrc file (using the Mail Filters module in Usermin).
Added the 'Hide limits from server owners' option to the reseller page, which prevents his customers from seeing the reseller's limits (although they are still enforced). Also updated the create-reseller.pl and modify-reseller.pl programs to all --hide options.
Added caching to make lookups of domains by parent and user faster.
Added tabs and more help text to the Script Installers page.
Added several new initial website content styles, such as Refresh, Dreamy, Rounded and Integral. All of these create multiple pages which can then be easily edited with the Edit Web Pages feature.
Added a button to the Edit Web Pages page to replace existing content with that generated from a style. Also added the --style option to modify-web.pl.
---- Changes since 3.37 ----
Removed old versions from the PHPmyAdmin script installer.
Updated the Drupal script installer to support version 5.1, Horde to 3.1.4 and IMP to 4.1.4.
Don't allow extra admins to switch to the domain owner.
Added a page for installing third-party content styles, which can then be used for new websites exactly like the built-in styles.