@@ -8,8 +8,10 @@ $file = $config{'update_template'};
 $file = "$module_config_directory/update-template"
 	if ($file eq "none" || $file eq 'default');
 
-&parse_email_template($file, "newupdate_subject", "newupdate_cc",
-      "newupdate_to_mailbox", "newupdate_to_owner", "newupdate_to_reseller");
+&parse_email_template($file, "newupdate_subject",
+		      "newupdate_cc", "newupdate_bcc",
+		      "newupdate_to_mailbox", "newupdate_to_owner",
+		      "newupdate_to_reseller");
 
 &webmin_log("newupdate");
 &redirect("");
