@@ -9,8 +9,10 @@ $file = $config{'user_template'};
 $file = "$module_config_directory/user-template"
 	if ($file eq "none" || $file eq 'default');
 
-&parse_email_template($file, "newuser_subject", "newuser_cc",
-	      "newuser_to_mailbox", "newuser_to_owner", "newuser_to_reseller");
+&parse_email_template($file, "newuser_subject",
+		      "newuser_cc", "newuser_bcc",
+	      	      "newuser_to_mailbox", "newuser_to_owner",
+		      "newuser_to_reseller");
 
 &webmin_log("newuser");
 &redirect("");
